# LiteEngine

./: CMakeLists.txt  CMakeOptions.txt  readme.md
src/: .clang-format  CMakeLists.txt  Config.h.in
src/addonmanager/: CAddonNativeWin32.h  CMakeLists.txt  IAddon.h  IAddonManager.h
src/core/: CMakeLists.txt  Precompiled.h  Str.h
src/framework/: CCommon.cpp  CCommon.h  CMakeLists.txt  ICommon.h  Main.cpp
src/rendersystem/: CMakeLists.txt  IFont.h  IRenderSystem.h
src/rendersystem/opengl/: CFontGL.h  CRenderSystemGL.cpp  CRenderSystemGL.h
src/sys/: CMakeLists.txt  Sys_Public.h
src/sys/win32/: SysWin32.cpp  SysWin32.h
